add config for header & footer logo

--- a/sections/footer-logo.liquid
+++ b/sections/footer-logo.liquid
@@ -84,12 +84,32 @@
     },
     {
       "type": "range",
+      "id": "padding_right",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_right",
+      "default": 50
+    },
+    {
+      "type": "range",
       "id": "padding_bottom",
       "min": 0,
       "max": 100,
       "step": 1,
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
+      "default": 50
+    },
+    {
+      "type": "range",
+      "id": "padding_left",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_left",
       "default": 50
     }
 
