--- a/sections/header-logo.liquid
+++ b/sections/header-logo.liquid
@@ -5,7 +5,9 @@
 
   .section-{{ section.id }}-padding {
     padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
+    padding-right: {{ section.settings.padding_right | times: 0.75 | round: 0 }}px;
     padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+    padding-left: {{ section.settings.padding_left | times: 0.75 | round: 0 }}px;
   }
 
   @media (min-width: 1024px) {
@@ -16,7 +18,7 @@
   }
 {% endstyle %}
 
-<div class="header-logo">
+<div class="header-logo section-{{ section.id }}-padding">
   {%- if request.page_type == 'index' -%}
     <h1 class="header__heading">
   {%- endif -%}
