--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -352,8 +352,8 @@
     </div>
     <div class="footer__content-bottom-wrapper page-width{% if section.settings.enable_country_selector == false and section.settings.enable_language_selector == false %} footer__content-bottom-wrapper--center{% endif %}">
       <div class="footer__copyright caption">
-        <small class="copyright__content"
-          >&copy; {{ 'now' | date: '%Y' }}, {{ shop.name | link_to: routes.root_url -}}
+        <small class="copyright__content">
+          &copy; {{ 'now' | date: '%Y' }}, {{ shop.name | link_to: routes.root_url -}}
         </small>
         <small class="copyright__content">{{ powered_by_link }}</small>
         {%- if section.settings.show_policy -%}
@@ -607,6 +607,22 @@
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
       "default": 36
+    },
+    {
+      "type": "header",
+      "content": "t:sections.all.copyright"
+    },
+    {
+      "type": "checkbox",
+      "id": "copyright_descriptions",
+      "label": "t:sections.footer.settings.copyright.descriptions.label",
+      "default": false
+    },
+    {
+      "type": "checkbox",
+      "id": "copyright_powered",
+      "label": "t:sections.footer.settings.copyright.powered_link.label",
+      "default": false
     }
   ],
   "default": {
