--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -296,8 +296,13 @@
 }
 
 @media screen and (min-width: 750px) {
-  .footer__content-bottom-wrapper:not(.footer__content-bottom-wrapper--center) .footer__copyright {
+  /* .footer__content-bottom-wrapper:not(.footer__content-bottom-wrapper--center) .footer__copyright {
     text-align: right;
+  }  */
+
+  .footer__copyright {
+    display: flex;
+    justify-content: space-between;
   }
 }
 
