--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -670,6 +670,30 @@
       "default": true
     },
     {
+      "type": "select",
+      "id": "copyright_position",
+      "options": [
+        {
+          "value": "center",
+          "label": "t:sections.footer.settings.copyright.position.options__1.label"
+        },
+        {
+          "value": "space-between",
+          "label": "t:sections.footer.settings.copyright.position.options__2.label"
+        },
+        {
+          "value": "flex-start",
+          "label": "t:sections.footer.settings.copyright.position.options__3.label"
+        },
+        {
+          "value": "flex-end",
+          "label": "t:sections.footer.settings.copyright.position.options__4.label"
+        }
+      ],
+      "default": "space-betwwen",
+      "label": "t:sections.header.settings.copyright_position.label"
+    },
+    {
       "type": "range",
       "id": "copyright_padding_right",
       "min": 0,
