--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -363,7 +363,7 @@
           </small>
         {%- endif -%}
 
-        <small class="copyright__content title">
+        <small class="copyright__content copyright__title">
           &copy; {{ 'now' | date: '%Y' }}, {{ shop.name | link_to: routes.root_url -}}
         </small>
 
