--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -291,7 +291,7 @@
         </noscript>
         <localization-form>
           {%- form 'localization', id: 'FooterCountryForm', class: 'localization-form' -%}
-            <div class="no-js-hidden">
+            <div class="no-js-hidden footer-localization">
               <h2 class="caption-large text-body" id="FooterCountryLabel">{{ 'localization.country_label' | t }}</h2>
               {%- render 'country-localization', localPosition: 'FooterCountry' -%}
             </div>
@@ -562,6 +562,12 @@
       "id": "enable_country_selector",
       "default": true,
       "label": "t:sections.footer.settings.enable_country_selector.label"
+    },
+    {
+      "type": "text",
+      "id": "country_selector_title",
+      "default": "Country",
+      "label": "t:sections.footer.settings.country_selector_title.label"
     },
     {
       "type": "header",
