--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -19,6 +19,10 @@
   flex-grow: 1;
 }
 
+.footer-localization {
+  display: flex;
+}
+
 @media screen and (min-width: 750px) {
   .localization-form {
     padding: 1rem 2rem 1rem 0;
