--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -447,6 +447,12 @@
           "label": "t:sections.footer.blocks.link_list.settings.heading.label"
         },
         {
+          "type": "checkbox",
+          "id": "heading_menu_enable",
+          "default": true,
+          "label": "t:sections.footer.blocks.link_list.settings.heading_menu_enable.label"
+        },
+        {
           "type": "link_list",
           "id": "menu",
           "default": "footer",
