--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -542,6 +542,29 @@
           "default": "center"
         }
       ]
+    },
+    {
+      "type": "newsletter",
+      "name": "t:sections.footer.blocks.newsletter.name",
+      "settings": [
+        {
+          "type": "header",
+          "content": "t:sections.footer.settings.header__1.content",
+          "info": "t:sections.footer.settings.header__1.info"
+        },
+        {
+          "type": "checkbox",
+          "id": "newsletter_enable",
+          "default": true,
+          "label": "t:sections.footer.settings.newsletter_enable.label"
+        },
+        {
+          "type": "inline_richtext",
+          "id": "newsletter_heading",
+          "default": "Subscribe to our emails",
+          "label": "t:sections.footer.settings.newsletter_heading.label"
+        }
+      ]
     }
   ],
   "settings": [
