--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -168,13 +168,91 @@
                         {{ 'image' | placeholder_svg_tag: 'placeholder-svg placeholder' }}
                       {%- endif -%}
                     </div>
+                  {%- when 'newsletter' -%}
+                    {%- if block.settings.newsletter_enable -%}
+                      <div class="footer-block__newsletter">
+                        {%- if block.settings.newsletter_heading != blank -%}
+                          <h2 class="footer-block__heading inline-richtext">{{ block.settings.newsletter_heading }}</h2>
+                        {%- endif -%}
+                        {%- form 'customer', id: 'ContactFooter', class: 'footer__newsletter newsletter-form' -%}
+                          <input type="hidden" name="contact[tags]" value="newsletter">
+                          <div class="newsletter-form__field-wrapper">
+                            <div class="field">
+                              <input
+                                id="NewsletterForm--{{ block.id }}"
+                                type="email"
+                                name="contact[email]"
+                                class="field__input"
+                                value="{{ form.email }}"
+                                aria-required="true"
+                                autocorrect="off"
+                                autocapitalize="off"
+                                autocomplete="email"
+                                {% if form.errors %}
+                                  autofocus
+                                  aria-invalid="true"
+                                  aria-describedby="ContactFooter-error"
+                                {% elsif form.posted_successfully? %}
+                                  aria-describedby="ContactFooter-success"
+                                {% endif %}
+                                placeholder="{{ 'newsletter.label' | t }}"
+                                required
+                              >
+                              <label class="field__label" for="NewsletterForm--{{ block.id }}">
+                                {{ 'newsletter.label' | t }}
+                              </label>
+                              <button
+                                type="submit"
+                                class="newsletter-form__button field__button"
+                                name="commit"
+                                id="Subscribe"
+                                aria-label="{{ 'newsletter.button_label' | t }}"
+                              >
+                                {% render 'icon-arrow' %}
+                              </button>
+                            </div>
+                            {%- if form.errors -%}
+                              <small class="newsletter-form__message form__message" id="ContactFooter-error">
+                                {%- render 'icon-error' -%}
+                                {{- form.errors.translated_fields.email | capitalize }}
+                                {{ form.errors.messages.email -}}
+                              </small>
+                            {%- endif -%}
+                          </div>
+                          {%- if form.posted_successfully? -%}
+                            <h3
+                              class="newsletter-form__message newsletter-form__message--success form__message"
+                              id="ContactFooter-success"
+                              tabindex="-1"
+                              autofocus
+                            >
+                              {% render 'icon-success' -%}
+                              {{- 'newsletter.success' | t }}
+                            </h3>
+                          {%- endif -%}
+                        {%- endform -%}
+                      </div>
+                    {%- endif -%}
+
+                    {%- if shop.features.follow_on_shop? and block.settings.enable_follow_on_shop -%}
+                      <div class="footer__follow-on-shop">
+                        {% comment %} TODO: enable theme-check once `login_button` is accepted as valid filter {% endcomment %}
+                        {% # theme-check-disable %}
+                        {{ shop | login_button: action: 'follow' }}
+                        {% # theme-check-enable %}
+                      </div>
+                    {%- endif -%}
+
+                    {%- if block.settings.show_social and has_social_icons -%}
+                      {%- render 'social-icons', class: 'footer__list-social' -%}
+                    {%- endif -%}
                 {%- endcase -%}
               </div>
             {%- endfor -%}
           </div>
         {%- endif -%}
 
-        <div
+        {% comment %} <div
           class="footer-block--newsletter{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
           {% if settings.animations_reveal_on_scroll %}
             data-cascade
@@ -247,7 +325,7 @@
 
           {%- if shop.features.follow_on_shop? and section.settings.enable_follow_on_shop -%}
             <div class="footer__follow-on-shop">
-              {% comment %} TODO: enable theme-check once `login_button` is accepted as valid filter {% endcomment %}
+              TODO: enable theme-check once `login_button` is accepted as valid filter
               {% # theme-check-disable %}
               {{ shop | login_button: action: 'follow' }}
               {% # theme-check-enable %}
@@ -257,7 +335,7 @@
           {%- if section.settings.show_social and has_social_icons -%}
             {%- render 'social-icons', class: 'footer__list-social' -%}
           {%- endif -%}
-        </div>
+        </div> {% endcomment %}
       </div>
     {%- endunless -%}
   {%- endif -%}
@@ -563,6 +641,28 @@
           "id": "newsletter_heading",
           "default": "Subscribe to our emails",
           "label": "t:sections.footer.settings.newsletter_heading.label"
+        },
+        {
+          "type": "header",
+          "content": "t:sections.footer.settings.header__9.content",
+          "info": "t:sections.footer.settings.header__9.info"
+        },
+        {
+          "type": "checkbox",
+          "id": "enable_follow_on_shop",
+          "default": true,
+          "label": "t:sections.footer.settings.enable_follow_on_shop.label"
+        },
+        {
+          "type": "header",
+          "content": "t:sections.footer.settings.header__2.content",
+          "info": "t:sections.footer.settings.header__2.info"
+        },
+        {
+          "type": "checkbox",
+          "id": "show_social",
+          "default": true,
+          "label": "t:sections.footer.settings.show_social.label"
         }
       ]
     }
